Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • W weston
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributor statistics
    • Graph
    • Compare revisions
  • Issues 388
    • Issues 388
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 106
    • Merge requests 106
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Artifacts
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
    • Model experiments
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar

Admin message

Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.

  • waylandwayland
  • weston
  • Issues
  • #679

kiosk-shell text input

In Weston 11 there appears to be an issue where text input stops working in the kiosk-shell.

The issue can be reproduced as follows:

  1. Start gtk3-demo in kiosk-shell
  2. Select Entry -> Entry Buffer
  3. Type some text.
  4. Double click the text, so that it is selected, then drag the selected text with the mouse.
  5. Text input no longer works.

This is with Weston 11 kiosk-shell and the patch needed to display anything at all: 341d09d2

The issue does not happen with desktop-shell and also not at all in Weston 10.

Edit a second way to reproduce:

  1. Start gtk3-demo in kiosk-shell
  2. Select the "Dialogs and Message Boxes"
  3. Enter some text in the "Entry 1" input field without having pressed any of the buttons.
  4. Press the "Message Dialog" button.
  5. Press Ok or Cancel in the Dialog
  6. Input to the "Entry 1" input field no longer works.
Edited Oct 21, 2022 by Fredrik Gustafsson
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking